# clippoo

./: .gitignore  .tool-versions  Cargo.toml  Makefile  README.md  TERMINAL_PASTE.md  test_db_insert.py  verify-build.sh
daemon/: Cargo.toml
daemon/src/: clipboard_watcher.rs  lib.rs  main.rs
daemon/tests/: daemon_test.rs
docs/: auto-paste-setup.md  keyboard-shortcuts.md  schema.sql
scripts/: clippoo-ui.sh  setup-shortcuts.sh  uninstall-shortcuts.sh
src/: shortcut_manager.rs
src/database/: mod.rs
systemd/: clippoo-daemon.service
tests/: database_test.rs
ui/: Cargo.toml
ui/src/: main.rs  popup.rs  style.css
