[workspace]
members = ["daemon", "ui"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Clippoo Contributors"]

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
log = "0.4"
env_logger = "0.10"

# Create a virtual package for tests
[package]
name = "clippoo-tests"
version = "0.1.0"
edition = "2021"

[[test]]
name = "database_test"
path = "tests/database_test.rs"

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
tempfile = "3.8"
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
serde = { workspace = true }
serde_json = { workspace = true }
dirs = "5.0"