[package]
name = "clippoo-daemon"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true }
sqlx = { version = "0.7", features = ["runtime-tokio-native-tls", "sqlite", "chrono"] }
dirs = "5.0"
chrono = { version = "0.4", features = ["serde"] }
arboard = "3.3"

[dev-dependencies]
tempfile = "3.8"

[[bin]]
name = "clippoo-daemon"
path = "src/main.rs"